--- a/index.html
+++ b/index.html
@@ -73,22 +73,116 @@
                 <div class="card1" id="cards">
                     <h4>Charlize Theron</h4>
                     <p>+12 movies</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> <i class="fas fa-star-half-alt"></i>
+                    </div>
                 </div>
                 <div class="card2" id="cards">
                     <h4>Keenu Reeves</h4>
                     <p>+27 movies</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                    </div>
                 </div>
                 <div class="card3" id="cards">
                     <h4>Martin Freeman</h4>
                     <p>+10 movies</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> <i class="fas fa-star-half-alt"></i>
+                    </div>
                 </div>
                 <div class="card4" id="cards">
                     <h4>Laurence Fishburne</h4>
                     <p>+22 movies</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="watching">
+            <div class="top">
+                <p>Continue Watching</p>
+                <div class="icons">
+                    <i class="fas fa-chevron-circle-left"></i>
+                    <i class="fas fa-chevron-circle-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box1" id="box">
+                    <p>Matrix Revolution</p>
+                </div>
+                <div class="box2" id="box">
+                    <p>Deadpool</p>
+                </div>
+                <div class="box3" id="box">
+                    <p>Lord of the Rings</p>
                 </div>
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <div class="overview">
+        <div class="search-bar">
+            <input type="text" id="search" name="search" placeholder="Search">
+        </div>
+        <div class="popular">
+            <div class="head">Popular Movies</div>
+            <div class="movies">
+                <div class="card">
+                    <div class="image image1" ></div>
+                    <div class="cont">
+                        <p>John Wick <br><span>Action, Horror</span></p>
+                        <p><i class="fab fa-imdb"></i><b> 7.4</b></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image image2"></div>
+                    <div class="cont">
+                        <p>Mad Max <br><span>Action, Adventure</span></p>
+                        <h4><i class="fab fa-imdb"></i> 8.1</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image image3"></div>
+                    <div class="cont">
+                        <p>Ip Man 2 <br><span>Action, Biography</span></p>
+                        <p><i class="fab fa-imdb"></i> 7.2</p>
+                    </div>
+                </div>
+            </div>
+            <button>See More</button>
+        </div>
+        <div class="fav">
+            <div class="head">Favorites</div>
+            <div class="movies">
+                <div class="card">
+                    <div class="image image4"></div>
+                    <div class="cont">
+                        <p>Hobbit 1 <br><span>Adventure, Fantasy</span></p>
+                        <p><i class="fab fa-imdb"></i> 7.8</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image image5"></div>
+                    <div class="cont">
+                        <p>I am Legend <br><span>Action, Adventure</span></p>
+                        <p><i class="fab fa-imdb"></i> 7.2</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image image6"></div>
+                    <div class="cont">
+                        <p>Avatar <br><span>Action, Fantasy</span></p>
+                        <p><i class="fab fa-imdb"></i> 7.8</p>
+                    </div>
+                </div>
+            </div>
+            <button>See More</button>
+        </div>
+    </div>
 </body>
 </html>
